--- a/liste_jeu.html
+++ b/liste_jeu.html
@@ -30,7 +30,7 @@
         <div class="contenu col-md-10 col-lg-offset-1">
             <?php if (isset($libelle_type_jeu)){ ?>
                 <h3 class="title_page" style="background-color: <?php echo $color_type_jeu; ?>;">
-                    <img src="<?= $icon_type_jeu; ?>" height="75" width="75">
+                    <img src="images/icone_site/<?= $icon_type_jeu; ?>" height="75" width="75">
                     <span class=""><?php echo $libelle_type_jeu; ?></span>
                 </h3>
                 <div class="col-md-10 main">
